# green_bier_sports_ncaam_model

./: .copilot-context.md  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ALL_MARKETS_TEST_RESULTS.md  API_KEY_SETUP.md  ARCHITECTURE.md  AZURE_DEPLOYMENT_STATUS.md  AZURE_MIGRATION_READY.md  AZURE_PACKAGE_SUMMARY.md  BACKTEST_VALIDATION_REPORT.md  BASKETBALL_API_REVIEW_COMPLETE.txt  CANONICAL_MASTER_STATUS.md  CHANGELOG_2025-12-20.md  CLEANUP_CHANGELOG_JAN12_2026.md  CLEANUP_COMPLETION_GOVERNANCE_SIGN_OFF.md  CLEANUP_COMPLETION_SUMMARY.md  CLEANUP_SUMMARY.md  COMMIT_PUSH_DEPLOY_COMPLETE.txt  COMPLETION_SUMMARY.txt  CRITICAL_FIX.md  DATA_ACQUISITION_PLAN.md  DEV_ENVIRONMENT_SETUP.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_CLEANUP_SUMMARY.txt  DOCUMENTATION_GOVERNANCE_INFRASTRUCTURE.md  DOCUMENTATION_GOVERNANCE_MANIFEST.json  END_TO_END_REVIEW.md  END_TO_END_SYSTEM_REVIEW.md  EXECUTION_REPORT.txt  FIXES_APPLIED.md  FIX_CANONICAL_MASTER_PLAN.md  GOVERNANCE_COMPLETION_FINAL_SUMMARY.md  GOVERNANCE_DOCUMENTATION_INDEX.md  GROK_SETUP.md  HOW_WE_KNOW_ALL_STALE_DOCS_ARE_DELETED.md  IMPROVEMENTS_SUMMARY.md  LOCAL_SETUP.md  (+56 more)
.azure/: plan.copilotmd
.devcontainer/: Dockerfile  README.md  devcontainer.json  devcontainer.prebuilt.json  emergency-recovery.sh  ensure-all-access.sh  ensure-codespace-ready.sh  install-heavy-requirements.sh  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
NCAAF_main/: .gitignore  BACKTESTING.md  CACHED_DATA_GUIDE.md  CONTAINERS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backtest  Dockerfile.prod  MASTER_FLOW.md  PORT_MAPPINGS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_USAGE.md  SYSTEM_OVERVIEW.md  UNIFIED_CONTAINER.md  backtest_report.txt  docker-compose.backtest.yml  docker-compose.manualfetch.yml  docker-compose.prod-live.yml  docker-compose.prod.yml  docker-compose.yml  run.bat  run_backtest.bat  run_backtest.sh  update_api_key.bat
archive/: README.md  analyze_backtest_results.py  capture_closing_lines.py
azure/: CONFIGURE_EXISTING_DB.md  README.md  SPORT_ALLOCATION.md  bind-domain.ps1  configure-existing-db.ps1  deploy.ps1  deploy.sh  deployment-info.json  enterprise-deploy.sh  finalize_migration.ps1  main.bicep  parameters.prod.json  port_allocator.py  pre_deploy_check.py
docs/: AZURE_BLOB_STORAGE_ARCHITECTURE.md  AZURE_INFRASTRUCTURE_DIAGRAM.md  AZURE_MIGRATION.md  AZURE_RESOURCE_CLEANUP.md  AZURE_RESOURCE_GROUP_REVIEW.md  BACKTESTING_METHODOLOGY.md  BARTTORVIK_FIELDS.md  BASKETBALL_API_CRITICAL_FINDINGS.md  BASKETBALL_API_ENDPOINTS_GUIDE.md  BASKETBALL_API_IMPLEMENTATION.md  BASKETBALL_API_QUICK_REFERENCE.md  BASKETBALL_API_REVIEW_SUMMARY.md  BRANCH_PROTECTION_SETUP.md  CANONICAL_INGESTION_ARCHITECTURE.md  CANONICAL_INGESTION_INTEGRATION_GUIDE.md  CANONICAL_INGESTION_MANIFEST.md  CANONICAL_INGESTION_QUICK_REFERENCE.md  CANONICAL_INGESTION_SUMMARY.md  CHANGELOG_v34.1.0.md  CONFIGURATION.md  DATA_ENDPOINT_STATUS.md  DATA_GOVERNANCE_EXECUTIVE_SUMMARY.md  DATA_GOVERNANCE_FRAMEWORK.md  DATA_GOVERNANCE_IMPLEMENTATION.md  (+48 more)
services/odds-ingestion-rust/: Cargo.toml  Dockerfile  README.md
services/odds-ingestion-rust/src/: main.rs
(+592 files in other folders)
