[package]
name = "odds-ingestion"
version = "5.0.0"
edition = "2021"
description = "Real-time NCAA basketball odds ingestion service"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server (for health endpoint)
axum = "0.7"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (TLS enabled for Azure Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Redis (TLS enabled for Azure Cache for Redis)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tls-rustls", "tokio-rustls-comp"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rate limiting
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
